--- a/pages/index.css
+++ b/pages/index.css
@@ -16,3 +16,13 @@
 @import url(../blocks/profile/__status/profile__status.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
+
+@import url(../blocks/elements/elements.css);
+
+@import url(../blocks/element/element.css);
+@import url(../blocks/element/__image/element__image.css);
+@import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__name/element__name.css);
+@import url(../blocks/element/__group/element__group.css);
+
+@import url(../blocks/footer/footer.css);
