--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,10 +1,12 @@
 .profile__edit-button {
-  cursor: pointer;
-  width: 24px;
-  height: 24px;
   background-image: url(../../../images/profile/Edit__Button.svg);
   background-size: cover;
-  align-self: flex-start;
+  border: 2px;
+  border-color: white;
+  width: 24px;
+  height: 24px;
   margin-left: 18px;
-  margin-top: 37px;
+  grid-area: edit-button;
+  box-sizing: border-box;
+  cursor: pointer;
 }
