--- a/blocks/element/__name/element__name.css
+++ b/blocks/element/__name/element__name.css
@@ -12,3 +12,9 @@
   bottom: 28px;
   max-width: 190px;
 }
+
+@media screen and (max-width: 768px) {
+  .element__name {
+    font-size: 3vw;
+  }
+}
