--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  width: 880px;
+  max-width: 880px;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -7,4 +7,10 @@
   margin: 0 auto;
   padding-bottom: 35px;
   color: #545454;
+}
+
+@media screen and (max-width:768px) {
+  .footer {
+    max-width: 570px;
+  }
 }
