--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,6 +2,13 @@
   margin: 0 auto;
   max-width: 880px;
   min-height: 74px;
+  padding-top: 45px;
   margin-bottom: 40px;
   border-bottom: 1px solid #545454;
+}
+
+@media screen and (max-width:768px) {
+  .header {
+    max-width: 570px;
+  }
 }
