--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,5 +1,16 @@
 .profile__info {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  grid-template-rows: auto auto;
+  row-gap: 4px;
+  align-items: center;
+  grid-template-areas:
+    "name edit-button"
+    "status status";
+}
+
+@media screen and (max-width: 768px) {
+  .profile__info {
+    justify-items: center;
+  }
 }
