--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -16,3 +16,10 @@
     margin-top: 33px;
   }
 }
+
+@media screen and (max-width:320px) {
+  .profile__add-button {
+    width: 282px;
+    height: 50px;
+  }
+}
