--- a/pages/index.css
+++ b/pages/index.css
@@ -26,3 +26,4 @@
 @import url(../blocks/element/__group/element__group.css);
 
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copy/footer__copy.css)
