--- a/blocks/element/__name/element__name.css
+++ b/blocks/element/__name/element__name.css
@@ -18,3 +18,10 @@
     font-size: 3vw;
   }
 }
+
+@media screen and (max-width:320px) {
+  .element__name {
+    font-size: 24px;
+    line-height: 29px;
+  }
+}
