--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -14,3 +14,11 @@
     justify-content: center
   }
 }
+
+@media screen and (max-width:320px) {
+  .elements {
+    grid-template-columns: repeat(1, 282px);
+    grid-template-rows: repeat(6, 361px);
+    margin-bottom: 50px;
+  }
+}
