--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,16 +1,17 @@
 .footer {
   max-width: 880px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
   margin: 0 auto;
   padding-bottom: 35px;
-  color: #545454;
 }
 
 @media screen and (max-width:768px) {
   .footer {
     max-width: 570px;
+  }
+}
+
+@media screen and (max-width:320px) {
+  .footer {
+    padding-bottom: 33px;
   }
 }
