--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -4,3 +4,12 @@
   width: 145px;
   height: 33px;
 }
+
+@media screen and (max-width:320px) {
+  .header__logo {
+    margin-top: 19px;
+    margin-left: 27px;
+    width: 103px;
+    height: 24px;
+  }
+}
