--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -10,3 +10,11 @@
   box-sizing: border-box;
   cursor: pointer;
 }
+
+@media screen and (max-width:320px) {
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+    margin-left: 9px;
+  }
+}
