--- a/pages/index.css
+++ b/pages/index.css
@@ -26,4 +26,14 @@
 @import url(../blocks/element/__group/element__group.css);
 
 @import url(../blocks/footer/footer.css);
-@import url(../blocks/footer/__copy/footer__copy.css)
+@import url(../blocks/footer/__copy/footer__copy.css);
+
+@import url(../blocks/form/form.css);
+@import url(../blocks/form/__close/form__close.css);
+@import url(../blocks/form/__edit/form__edit.css);
+@import url(../blocks/form/__info/form__info.css);
+@import url(../blocks/form/__name/form__name.css);
+@import url(../blocks/form/__status/form__status.css);
+@import url(../blocks/form/__submit-button/form__submit-button.css);
+@import url(../blocks/form/__title/form__title.css);
+@import url(../blocks/form/__popup/form__popup.css);
