--- a/blocks/form/__close/form__close.css
+++ b/blocks/form/__close/form__close.css
@@ -8,6 +8,10 @@
   cursor: pointer;
 }
 
+.form__close:hover {
+  opacity: 0.6;
+}
+
 @media screen and (max-width:768px) {
   .form__close {
     left: 333px;
