--- a/blocks/form/__submit-button/form__submit-button.css
+++ b/blocks/form/__submit-button/form__submit-button.css
@@ -8,6 +8,11 @@
   background-color: black;
   width: 358px;
   height: 50px;
+  cursor: pointer;
+}
+
+.form__submit-button:hover {
+  opacity: 0.8;
 }
 
 @media screen and (max-width:768px) {
