--- a/blocks/element/__group/element__group.css
+++ b/blocks/element/__group/element__group.css
@@ -1,3 +1,8 @@
 .element__group {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 25px;
+  margin-left: 21px;
 }
