--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -4,9 +4,7 @@
   width: 22px;
   height: 19px;
   cursor: pointer;
-  position: absolute;
-  right: 20px;
-  bottom: 30px;
+  margin-right: 21px;
 }
 
 .element__like:hover {
