--- a/blocks/element/__name/element__name.css
+++ b/blocks/element/__name/element__name.css
@@ -7,10 +7,7 @@
   overflow: hidden;
   margin: 0;
   color: black;
-  position: absolute;
-  left: 21px;
-  bottom: 28px;
-  max-width: 190px;
+  max-width: 70%;
 }
 
 @media screen and (max-width: 768px) {
