--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -5,13 +5,13 @@
   column-gap: 17px;
   row-gap: 20px;
   margin-bottom: 67px;
+  justify-items: center;
 }
 
 @media screen and (max-width: 768px) {
   .elements {
     grid-template-columns: repeat(2, minmax(100px, 266px));
     grid-template-rows: repeat(3, 1fr);
-    justify-content: center;
   }
 }
 
