--- a/blocks/form/__status/form__status.css
+++ b/blocks/form/__status/form__status.css
@@ -2,7 +2,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
-  padding-bottom: 13px;
+  padding-bottom: 10px;
   width: 83%;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
@@ -11,4 +11,10 @@
 
 .form__status:focus {
   outline: none;
+}
+
+@media screen and (max-width:320px) {
+  .form__status {
+    margin-bottom: 44px;
+  }
 }
