--- a/blocks/form/__title/form__title.css
+++ b/blocks/form/__title/form__title.css
@@ -3,19 +3,23 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
-  margin: 0;
-  margin-top: 34px;
-  margin-bottom: 56px;
-  margin-left: 36px;
+  margin: 34px 0 49px 36px;
   color: black;
+}
+
+@media screen and (max-width:768px) {
+  .form__title {
+    text-align: center;
+    margin-left: 0;
+  }
 }
 
 @media screen and (max-width:320px) {
   .form__title {
     font-size: 18px;
     line-height: 22px;
-    margin-top: 18px;
-    margin-bottom: 71px;
-    margin-left: 20px;
+    margin-top: 26px;
+    margin-bottom: 75px;
+    margin-right: 8px;
   }
 }
