--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -5,6 +5,13 @@
   height: 33px;
 }
 
+@media screen and (max-width:768px) {
+  .header__logo {
+    width: 148px;
+    height: 34px;
+  }
+}
+
 @media screen and (max-width:320px) {
   .header__logo {
     margin-top: 19px;
