--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,7 +5,12 @@
   font-size: 42px;
   line-height: 48px;
   grid-area: name;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 300px;
 }
+
 @media screen and (max-width:320px) {
   .profile__name {
     font-size: 27px;
