--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -9,6 +9,7 @@
   grid-area: edit-button;
   box-sizing: border-box;
   cursor: pointer;
+  background-color: black;
 }
 
 .profile__edit-button:hover {
