--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,4 +1,4 @@
-.form__close {
+.popup__close {
   background-image: url(../../../images/Close_Icon.svg);
   width: 32px;
   height: 32px;
@@ -6,20 +6,22 @@
   right: -40px;
   top: -39px;
   cursor: pointer;
+  background-color: black;
+  border: none;
 }
 
-.form__close:hover {
+.popup__close:hover {
   opacity: 0.6;
 }
 
 @media screen and (max-width:768px) {
-  .form__close {
+  .popup__close {
     right: 0px;
   }
 }
 
 @media screen and (max-width: 320px) {
-  .form__close {
+  .popup__close {
     background-image: url(../../../images/Close_Icon-mini.svg);
     width: 20px;
     height: 20px;
