--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -1,4 +1,4 @@
-.form__submit-button {
+.popup__submit-button {
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
@@ -11,19 +11,19 @@
   cursor: pointer;
 }
 
-.form__submit-button:hover {
+.popup__submit-button:hover {
   opacity: 0.8;
 }
 
 @media screen and (max-width:768px) {
-  .form__submit-button {
+  .popup__submit-button {
     width: 291px;
     height: 40px;
   }
 }
 
 @media screen and (max-width:320px) {
-  .form__submit-button {
+  .popup__submit-button {
     width: 238px;
     height: 46px;
     font-size: 14px;
