--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -7,7 +7,6 @@
 
 @media screen and (max-width:320px) {
   .profile__avatar {
-    margin: 0;
-    margin-bottom: 28px;
+    margin: 0 0 28px;
   }
 }
