--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -6,7 +6,7 @@
   right: -40px;
   top: -39px;
   cursor: pointer;
-  background-color: black;
+  background-color: rgba(0,0,0,0);
   border: none;
 }
 
