--- a/blocks/popup/__input/popup__input_status.css
+++ b/blocks/popup/__input/popup__input_status.css
@@ -1,10 +1,10 @@
-.popup__input-status {
+.popup__input_status {
   padding-bottom: 10px;
   margin-bottom: 48px;
 }
 
 @media screen and (max-width:320px) {
-  .popup__input-status {
+  .popup__input_status {
     margin-bottom: 44px;
   }
 }
