--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -11,8 +11,7 @@
 
 @media screen and (max-width: 768px) {
   .profile__info {
-    justify-items: center;
-    margin-left: 28px;
+    max-width: 335px;
   }
 }
 
