--- a/blocks/element/__name/element__name.css
+++ b/blocks/element/__name/element__name.css
@@ -10,6 +10,12 @@
   max-width: 70%;
 }
 
+@media screen and (max-width: 1024px) {
+  .element__name {
+    font-size: 2.3vw;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .element__name {
     font-size: 3vw;
