--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  width: 100%;
   height: 362px;
   border-radius: 10px;
   background-color: white;
