--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,7 +1,7 @@
 .elements {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(3, minmax(100px, 282px));
+  grid-template-rows: auto;
   column-gap: 17px;
   row-gap: 20px;
   margin-bottom: 67px;
@@ -12,14 +12,14 @@
 @media screen and (max-width: 768px) {
   .elements {
     grid-template-columns: repeat(2, minmax(100px, 266px));
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: auto;
   }
 }
 
 @media screen and (max-width:320px) {
   .elements {
     grid-template-columns: repeat(1, 282px);
-    grid-template-rows: repeat(6, 361px);
+    grid-template-rows: auto;
     margin-bottom: 50px;
   }
 }
