Исправил все ошибки

--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -9,6 +9,7 @@
   width: 358px;
   height: 50px;
   cursor: pointer;
+  margin-bottom: 38px;
 }
 
 .popup__submit-button:hover {
@@ -28,5 +29,6 @@
     height: 46px;
     font-size: 14px;
     line-height: 17px;
+    margin-bottom: 25px;
   }
 }
