--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -6,6 +6,7 @@
   left: 50%;
   border-radius: 10px;
   transform: translate(-50%, -50%);
+  z-index: 2;
 }
 
 @media screen and (max-width:768px) {
