--- a/pages/index.css
+++ b/pages/index.css
@@ -49,6 +49,7 @@
 @import url(../blocks/popup/__card-name-input-error/popup__card-name-input-error.css);
 @import url(../blocks/popup/__card-src-input-error/popup__card-src-input-error.css);
 @import url(../blocks/popup/__input-error/popup__input-error-active.css);
+@import url(../blocks/popup/__overlay/popup__overlay.css);
 
 @import url(../blocks/popup-card/popup-card.css);
 @import url(../blocks/popup-card/popup-card__content/popup-card__content.css);
@@ -56,3 +57,4 @@
 @import url(../blocks/popup-card/popup-card__image/popup-card__image.css);
 @import url(../blocks/popup-card/popup-card__caption/popup-card__caption.css);
 @import url(../blocks/popup-card/popup-card__opened/popup-card__opened.css);
+@import url(../blocks/popup-card/popup-card__overlay/popup-card__overlay.css);
