--- a/src/blocks/element/__like/element__like.css
+++ b/src/blocks/element/__like/element__like.css
@@ -1,10 +1,12 @@
 .element__like {
   background-image: url(../../../images/element/Group.svg);
   background-size: cover;
+  position: absolute;
   width: 22px;
   height: 19px;
   cursor: pointer;
-  margin-right: 21px;
+  bottom: 39px;
+  right: 21px;
   background-color: white;
   border: none;
 }
