--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -26,6 +26,7 @@
 @import url(../blocks/element/__group/element__group.css);
 @import url(../blocks/element/__like/_active/element__like_active.css);
 @import url(../blocks/element/__trash/element__trash.css);
+@import url(../blocks/element/__counter/element__counter.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copy/footer__copy.css);
