--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -2,12 +2,6 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  margin-right: 30px;
   object-fit: cover;
-}
-
-@media screen and (max-width:320px) {
-  .profile__avatar {
-    margin: 0 0 28px;
-  }
+  cursor: pointer;
 }
