--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -16,6 +16,8 @@
 @import url(../blocks/profile/__status/profile__status.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/profile/__avatar-edit/profile__avatar-edit.css);
+@import url(../blocks/profile/__overlay/profile__overlay.css);
 
 @import url(../blocks/elements/elements.css);
 
@@ -53,3 +55,5 @@
 @import url(../blocks/popup/__caption-card/popup-card__caption.css);
 @import url(../blocks/popup/__content-card/popup-card__content.css);
 @import url(../blocks/popup/__image-card/popup__image-card.css);
+@import url(../blocks/popup/__avatar-src-input-error/popup__avatar-src-input-error.css);
+@import url(../blocks/popup/__input/_avatar-src/popup__input_avatar-src.css);
